# csb

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  requirements.txt  run.sh
bench/: CMakeLists.txt  benchmark.c
bench/include/CSB/: bm_helper.h  bm_network.h  bm_params.h  bm_stats.h  math.h  time.h
bench/network/: CMakeLists.txt  client  client.c  helper.h  server.c  test-comm.sh
bench/targets/gen-ws/: min_strac_recvfrom_sendto_19_0.h
bench/targets/gen-ws/syz/: min_strac_recvfrom_sendto_19_0.h
bench/targets/mysql/: min_mysql_close_dup_0_0.h  min_mysql_faccessat2_missing_1_0.h  min_mysql_fcntl_setsockopt_0_0.h  min_mysql_fsync_fcntl_3_0.h  min_mysql_fsync_fcntl_7_0.h  min_mysql_fsync_pwrite64_0_0.h  min_mysql_getdents64_close_0_0.h  min_mysql_lseek_fallocate_101_0.h  min_mysql_lseek_fallocate_104_0.h  min_mysql_lseek_fallocate_109_0.h  min_mysql_lseek_fallocate_24_0.h  min_mysql_lseek_fallocate_44_0.h  min_mysql_lseek_fallocate_45_0.h  min_mysql_lseek_fallocate_66_0.h  min_mysql_lseek_fallocate_68_0.h  min_mysql_lseek_fallocate_79_0.h  min_mysql_lseek_fallocate_81_0.h  min_mysql_lseek_fallocate_94_0.h  min_mysql_lseek_fallocate_97_0.h  min_mysql_lseek_fallocate_98_0.h  min_mysql_lseek_fallocate_99_0.h  min_mysql_lseek_fcntl_17_0.h  min_mysql_lseek_fcntl_20_0.h  min_mysql_lseek_fcntl_21_0.h  min_mysql_lseek_fcntl_23_0.h  min_mysql_lseek_openat_0_0.h  min_mysql_lseek_pwrite64_0_0.h  min_mysql_lseek_pwrite64_24_0.h  min_mysql_lseek_pwrite64_9_0.h  min_mysql_lseek_read_1_0.h  min_mysql_newfstatat_0_1.h  min_mysql_newfstatat_getdents64_0_0.h  min_mysql_newfstatat_missing_0_0.h  min_mysql_newfstatat_openat_0_0.h  min_mysql_newfstatat_openat_0_1.h  min_mysql_openat_fsync_0_2.h  min_mysql_openat_lseek_26_0.h  min_mysql_pread64_faccessat2_0_5.h  min_mysql_pread64_fcntl_8_0.h  min_mysql_pread64_lseek_0_0.h  (+14 more)
bench/targets/mysql/syz/: min_mysql_close_dup_0_0.h  min_mysql_faccessat2_missing_1_0.h  min_mysql_fcntl_setsockopt_0_0.h  min_mysql_fsync_fcntl_7_0.h  min_mysql_fsync_pwrite64_0_0.h  min_mysql_getdents64_close_0_0.h  min_mysql_lseek_fallocate_101_0.h  min_mysql_lseek_fallocate_104_0.h  min_mysql_lseek_fallocate_109_0.h  min_mysql_lseek_fallocate_24_0.h  min_mysql_lseek_fallocate_44_0.h  min_mysql_lseek_fallocate_45_0.h  min_mysql_lseek_fallocate_66_0.h  min_mysql_lseek_fallocate_68_0.h  (+38 more)
bench/targets/mysql_v2/: min_mysql_close_openat_0_0.h  min_mysql_epoll_create1_missing_0_0.h  min_mysql_faccessat2_missing_1_0.h  min_mysql_fcntl_setsockopt_0_0.h  min_mysql_fsync_fcntl_7_0.h  min_mysql_fsync_pwrite64_0_0.h  min_mysql_io_getevents_clock_gettime_10_0.h  min_mysql_io_getevents_clock_gettime_17_0.h  min_mysql_lseek_fallocate_109_0.h  min_mysql_lseek_fallocate_113_0.h  min_mysql_lseek_fallocate_16_0.h  min_mysql_lseek_fallocate_24_0.h  min_mysql_lseek_fallocate_26_0.h  min_mysql_lseek_fallocate_35_0.h  min_mysql_lseek_fallocate_43_0.h  min_mysql_lseek_fallocate_44_0.h  min_mysql_lseek_fallocate_52_0.h  min_mysql_lseek_fallocate_66_0.h  min_mysql_lseek_fallocate_68_0.h  min_mysql_lseek_fallocate_90_0.h  min_mysql_lseek_fallocate_91_0.h  min_mysql_lseek_fallocate_94_0.h  min_mysql_lseek_fallocate_95_0.h  min_mysql_lseek_fallocate_97_0.h  min_mysql_lseek_fallocate_98_0.h  min_mysql_lseek_fcntl_17_0.h  min_mysql_lseek_fcntl_21_0.h  min_mysql_lseek_fcntl_23_0.h  min_mysql_lseek_openat_0_0.h  min_mysql_lseek_pwrite64_0_0.h  min_mysql_lseek_pwrite64_13_0.h  min_mysql_lseek_pwrite64_14_0.h  min_mysql_lseek_pwrite64_20_0.h  min_mysql_lseek_pwrite64_25_0.h  min_mysql_lseek_pwrite64_26_0.h  min_mysql_lseek_pwrite64_2_0.h  min_mysql_lseek_pwrite64_6_0.h  min_mysql_lseek_pwrite64_9_0.h  min_mysql_newfstatat_getdents64_0_0.h  min_mysql_newfstatat_missing_0_0.h  (+19 more)
bench/targets/rocksdb/: min_rocks_fcntl_pread64_0_0.h  min_rocks_fcntl_read_0_0.h  min_rocks_newfstatat_missing_0_0.h  min_rocks_pread64_fcntl_67_0.h  min_rocks_pread64_fcntl_9_0.h  min_rocks_pread64_write_0_0.h  min_rocks_read_fcntl_0_0.h  min_rocks_read_openat_0_0.h  min_rocks_read_openat_2_0.h  min_rocks_write_fcntl_0_0.h  min_rocks_write_fcntl_1_0.h  min_rocks_write_fcntl_3_0.h  min_rocks_write_fcntl_4_0.h  min_rocks_write_fcntl_5_0.h  min_rocks_write_fcntl_7_0.h  min_rocks_write_fcntl_8_0.h  min_rocks_write_fcntl_9_0.h
bench/targets/rocksdb_v2/: min_rocks_fcntl_pread64_0_0.h  min_rocks_fcntl_pread64_0_1.h  min_rocks_fcntl_read_0_0.h  min_rocks_fcntl_read_0_1.h  min_rocks_fcntl_read_1_0.h  min_rocks_fcntl_read_1_1.h  min_rocks_getdents64_openat_0_0.h  min_rocks_getdents64_openat_0_1.h  min_rocks_newfstatat_missing_0_0.h  min_rocks_newfstatat_missing_0_1.h  min_rocks_pread64_fcntl_0_0.h  min_rocks_pread64_fcntl_0_1.h  min_rocks_pread64_fcntl_100_0.h  min_rocks_pread64_fcntl_100_1.h  min_rocks_pread64_fcntl_10_0.h  min_rocks_pread64_fcntl_10_1.h  min_rocks_pread64_fcntl_11_0.h  min_rocks_pread64_fcntl_11_1.h  min_rocks_pread64_fcntl_12_0.h  min_rocks_pread64_fcntl_12_1.h  min_rocks_pread64_fcntl_13_0.h  min_rocks_pread64_fcntl_13_1.h  min_rocks_pread64_fcntl_14_0.h  min_rocks_pread64_fcntl_14_1.h  min_rocks_pread64_fcntl_15_0.h  min_rocks_pread64_fcntl_15_1.h  min_rocks_pread64_fcntl_16_0.h  min_rocks_pread64_fcntl_16_1.h  min_rocks_pread64_fcntl_17_0.h  min_rocks_pread64_fcntl_17_1.h  min_rocks_pread64_fcntl_18_0.h  min_rocks_pread64_fcntl_18_1.h  min_rocks_pread64_fcntl_19_0.h  min_rocks_pread64_fcntl_19_1.h  min_rocks_pread64_fcntl_1_0.h  min_rocks_pread64_fcntl_1_1.h  min_rocks_pread64_fcntl_20_0.h  min_rocks_pread64_fcntl_20_1.h  min_rocks_pread64_fcntl_21_0.h  min_rocks_pread64_fcntl_21_1.h  (+212 more)
bm-generator/: 01_build.sh  02_parse.sh  03_extract.sh  04_prepare.sh  05_generate.sh  06_select.sh  45_prepare_generate.sh  50_regenerate.sh  99_clean.sh  CMakeLists.txt  test.sh
bm-generator/helper/: bm-generator-lib.sh  compare_strace_to_syzprog.sh  prog2bm.sh  prog2c.sh
bm-generator/network/: client.c  server.c
bm-generator/templates/: CMakeLists.txt  bm.json.in  bm_single.json.in  fg_single.json.in  syz_bm.json.in  syz_single.h.in  syz_single.h.in-v0.2  syz_single.json.in  tmplr.cmake  zoom_out_single.json.in
(+1169 files in other folders)
